# vulkan-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  log.txt  main.cpp  readme.md
demos/action-puzzle/action-puzzle/: ActionPuzzle.cpp  CMakeLists.txt  main.cpp
demos/compute/: CMakeLists.txt  Compute.cpp  Compute.h  main.cpp
demos/compute/rps/: test_asd.rpsl  test_asd.rpsl.g.c  test_triangle.rpsl  test_triangle.rpsl.g.c
demos/islands/: CMakeLists.txt  info.md  islands.cpp  islands.h  main.cpp
demos/islands/generation/: LandMeshGenerator.cpp  LandMeshGenerator.h
demos/islands/resources/: Heightmap.h
demos/particle-system/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  main.cpp
demos/skinning/: CMakeLists.txt  Skinning.cpp  Skinning.h  main.cpp
demos/top-down-shooter/: CMakeLists.txt  TopDownShooter.cpp  TopDownShooter.h  main.cpp
demos/top-down-shooter/camera/: ViewerCamera.h
demos/top-down-shooter/controller/: Controller.cpp  Controller.h  Monster.cpp  Monster.h  Nightmare.cpp  Nightmare.h  Player.cpp  Player.h
demos/top-down-shooter/objects/: Ground.h  GroundItems.cpp  GroundItems.h
demos/top-down-shooter/projectile/: Projectile.cpp  Projectile.h
engine/: CMakeLists.txt  CommonIncludes.h  Configuration.h  Engine.cpp  Engine.h  Handle.cpp  Handle.h  Handle.inl  IGame.h  ResourceReleaser.inl  test_triangle.rpsl.g.c
engine/GUI/: GUI.cpp  GUI.h
engine/cmake/: Configuration.cmake  FindVulkan.cmake  Modules.cmake
engine/ecs/: CommandBuffer.h  ECS.h  EntityChunks.h  EntityTemplate.cpp  EntityTemplate.h  System.h  TransformGraph.h
engine/ecs/components/: AnimationController.h  Batching.h  BehaviourList.h  BoneAttachment.h  CullingData.h  DrawCall.h  Entity.h  Light.cpp  Light.h  MeshRenderer.h  MultiMeshRenderer.h  Particles.cpp  Particles.h  Physics.h  Static.h  Transform.h
engine/ecs/systems/: BatchingSystem.cpp  BatchingSystem.h  BehaviourSystem.h  CullingSystem.cpp  CullingSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RendererSystem.cpp  RendererSystem.h  SkinningSystem.cpp  SkinningSystem.h  TransformSystem.cpp  TransformSystem.h  UpdateDrawCallsSystem.cpp  UpdateDrawCallsSystem.h
engine/lib/glm/: CMakeLists.txt
engine/lib/half/: half.h
engine/lib/ktx/: ktxvulkan.h  swap.c
engine/lib/murmurhash/: MurmurHash3.cpp  MurmurHash3.h
engine/lib/stb/: stb_image.h
engine/lib/tracy/: TracyClient.cpp
engine/loader/: FileLoader.cpp  FileLoader.h  HierarchyLoader.cpp  HierarchyLoader.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderUtils.cpp  SpritesheetLoader.cpp  TextureLoader.cpp  TextureLoader.h
engine/loader/image/: DDS.h  DDSLoader.cpp  DDSLoader.h  DDSLoaderHelpers.h  DXGIFormat.h
engine/memory/: Allocator.cpp  Allocator.h  Containers.h  PoolAllocator.cpp  PoolAllocator.h  Profiler.cpp  Profiler.h
engine/modules/bloom/: Bloom.cpp  Bloom.h  CMakeLists.txt  bloom.hlsl  bloom.rpsl  bloom.rpsl.g.c
engine/modules/blur/: Blur.cpp  Blur.h  CMakeLists.txt  blur.hlsl  blur.rpsl  blur.rpsl.g.c
engine/objects/: Camera.cpp  Camera.h  LightObject.cpp  LightObject.h  MeshObject.cpp  MeshObject.h  Projector.cpp  Projector.h  SkinnedMeshObject.cpp  SkinnedMeshObject.h
engine/render/: DataStructures.h
engine/render/animation/: SkeletalAnimation.cpp  SkeletalAnimation.h
engine/render/buffer/: ConstantBuffer.h  DynamicBuffer.h  GPUBuffer.h  UniformBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h
engine/render/debug/: DebugDraw.cpp  DebugDraw.h  DebugSettings.h  DebugUI.cpp  DebugUI.h  ImGUIHelper.h  Profiler.cpp  Profiler.h
engine/render/device/: Device.h  Resource.cpp  Resource.h  Types.cpp  Types.h  VkObjects.cpp  VkObjects.h  VulkanCaps.h  VulkanContext.cpp  (+17 more)
engine/resources/: EntityResource.cpp  EntityResource.h  HierarchyData.h  MaterialResource.cpp  MaterialResource.h  MeshSet.cpp  MeshSet.h  ModelBundle.cpp  ModelBundle.h  MultiMesh.cpp  MultiMesh.h  PhysCollider.cpp  PhysCollider.h  ResourceCache.cpp  ResourceCache.h  SkeletalAnimationResource.cpp  SkeletalAnimationResource.h  SkeletonResource.cpp  SkeletonResource.h  SkinningData.cpp  SkinningData.h  TextureResource.cpp  TextureResource.h
engine/scene/: AnimationController.cpp  AnimationController.h  Behaviour.cpp  Behaviour.h  GameObject.cpp  GameObject.h  Physics.cpp  Physics.h  PhysicsHelper.cpp  PhysicsHelper.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
engine/shaders/: bloom.hlsl  blur.hlsl  global_bindings.hlsl  imgui.hlsl  material_main.frag  material_main.hlsl  material_main.vert  skybox.hlsl  test.comp
engine/system/: BaseHandle.h  Dialogs.cpp  Dialogs.h  ErrorDump.cpp  ErrorDump.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  JobSystem.cpp  JobSystem.h  Logging.h  System.cpp  System.h  utils.h
engine/tests/: test_allocators.cpp  test_containers.cpp  test_ecs.cpp  test_job_system.cpp  test_ktx.cpp  test_main.cpp  test_material.cpp  test_systems.cpp  test_transform_graph.cpp  test_transform_system.cpp
engine/utils/: CapsSet.h  DataStructures.h  EventDispatcher.h  Frustum.h  JsonUtils.h  Math.cpp  Math.h  MeshGeneration.cpp  MeshGeneration.h  NonCopyable.h  Pool.h  StringUtils.cpp  StringUtils.h
game/: CMakeLists.txt  Game.cpp  Game.h  GameUtils.cpp  GameUtils.h  main.cpp
game/camera/: ViewerCamera.cpp
game/gameplay/: Gameplay.cpp  Gameplay.h  GameplayUtils.cpp  GameplayUtils.h
game/level/: Level.cpp  Level.h
game/objects/: FollowCamera.cpp  FollowCamera.h  PlayerController.cpp  PlayerController.h  Sprite.cpp  Sprite.h  StainGlass.cpp  StainGlass.h
game/systems/: ControlsSystem.cpp
game_ecs/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
game_ecs/level/: Level.cpp
model_viewer/: CMakeLists.txt  ModelViewer.cpp  ModelViewer.h  main.cpp
model_viewer/GUI/: ModelViewerGUI.cpp  ModelViewerGUI.h
model_viewer/camera/: ViewerCamera.cpp  ViewerCamera.h
tools/FBXExporter/: CMakeLists.txt  FBXExporterMain.cpp  FBXExporterSettings.h  SceneExporter.cpp  SceneExporter.h  SceneExporterUtils.cpp  SceneExporterUtils.h
tools/ProjectManager/: CMakeLists.txt  ProjectManagerMain.cpp
(+444 files in other folders)
